--- a/BWDeathChest/plugin.yml
+++ b/BWDeathChest/plugin.yml
@@ -1,7 +1,7 @@
-name: BWRPDeathChest
+name: BWDeathChest
 main: com.bwroleplay.bwrpdeathchest.DeathChest
-version: 1.0
-api-version: 1.15
+version: 2.0
+api-version: 1.12
 author: MX26
 description: "On player death, spawns chest with inventory and time of death"
 depend: [BWTimeManagement]
