--- a/BWDeathChest/plugin.yml
+++ b/BWDeathChest/plugin.yml
@@ -1,6 +1,6 @@
-name: BWRPDeathChest
+name: BWDeathChest
 main: com.bwroleplay.bwrpdeathchest.DeathChest
-version: 1.0
+version: 1.1
 api-version: 1.15
 author: MX26
 description: "On player death, spawns chest with inventory and time of death"
